# crib-clean

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
include/Crib/: App  Graphics  Math
include/Crib/Platform/: Win
include/crib/: app  graphics  math
include/crib/platform/: win
src/: main.cpp
src/App/: Window.cpp
src/App/Win/: App.h  App_win.cpp  Window_win.cpp
src/App/Xlib/: App.h  App_x11.cpp  Window_x11.cpp
src/Graphics/: Font.cpp  Font.h
src/Graphics/OpenGL/: Context.h  Context_gl.cpp  Context_glx.cpp  Context_wgl.cpp
src/Platform/Win/: COM.cpp  Error_win.cpp  String_win.cpp
src/app/: window.cpp
src/app/win/: app_win.cpp  app_win.h  com.cpp  error_win.cpp  string_win.cpp  window_win.cpp
src/app/x/: app_x.cpp  app_x.h  window_x.cpp
src/graphics/gl/: context_gl.cpp  context_gl.h  gl_win.cpp  gl_x.cpp
